# urdf-training

andi_x1_support/: CMakeLists.txt  package.xml
andi_x1_support/launch/: load_x1.launch  test_x1.launch
andi_x1_support/meshes/: andi_x1_collision.stl  verticaltestingmount_collision.stl
andi_x1_support/urdf/: x1.xacro  x1_macro.xacro
